SHNSITE-23 [STICKY-HEADER]: fixed gap between sticky header and top window border (iOS)

--- a/src/components/shared/StickyHeader/index.module.scss
+++ b/src/components/shared/StickyHeader/index.module.scss
@@ -11,6 +11,7 @@
     justify-content: center;
     height: 4.25vw;
     background: $black;
+    padding-top: 5px;
 
     @media (max-width: $screen2Xl) {
         height: 68px;
